minor logo issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="nav-logo">
                 <div class="logo">
-                    <img src="/assets/mintlify-wordmark.svg" alt="Mintlify-Logo">
+                    <img src="./assets/mintlify-wordmark.svg" alt="Mintlify-Logo">
                 </div>
 
                 <div class="nav-links">
